--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,7 +14,7 @@ body{
   max-height: 40%;
 }
 .navbar-default {
-	background-color: #007235;
+	background-color: #ff0000;
 				}
 
 .navbar-default .navbar-brand{
@@ -49,7 +49,7 @@ body{
 #features{
 	text-align: center;
 	font-family: sans-serif;
-	color: #1d3894;
+	color: #007135;
 	font-size: 30px;
 	font-weight: bold;
 }
@@ -61,7 +61,7 @@ body{
 }
 
 footer{
-	background: #007235;
+	background: #ff0000;
 	color: #ffffff;
 	
 }
