--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -13,23 +13,23 @@
 		 </div>
 			<div class="col-sm-3">
 			<div class="left">
-				<h4 style="font-family:Calibri"> <strong> Contact Us:</strong></h4>
+				<%= t('contact_html') %>
+				
 				<link><a href="/pages/home"><font color="white">customers@ontariosonly.ca</font></a></link>
 				<h5 style="font-family:Tahoma" ><font size="4"><strong>1-844-ONT-ONLY</strong></font></h5>
 				</div>
 			</div>
 				<div class="col-sm-3">
 				<div class="left">
-				<h4 style="font-family:Calibri"> <strong> About Us:
-				</strong></h4>
-				<h6>Ontario's Only is an online marketing company that offers proffessional advertising service to all real estate professionals in the province of Ontario Canada.</h6>
+				<%= t('about_html') %>
 				</div>
 			</div>
 
 		<div class="form-group">	
 		<div class="col-sm-3">
 			<div class="left">
-			<h4 style="font-family:Calibri"><strong>FOLLOW US<strong></h4>
+			<%= t('follow_html') %>
+			
 			<div class="form-group">
 			<div class="row">
         		<a href="http://www.facebook.com"><%= image_tag("facebookpage.png", :size => "33x33", :alt => "Facebook" ) %></a>
