--- a/app/assets/stylesheets/commercialpropertiesforsales.css.scss
+++ b/app/assets/stylesheets/commercialpropertiesforsales.css.scss
@@ -4,18 +4,18 @@
 }
 .jumbotron{
 
-	background-image: url(http://i59.tinypic.com/21mtg61.png);
+	background-image: url(http://i62.tinypic.com/33f9v11.jpg);
 	height: 170px;
 	background-repeat: no-repeat;
 	margin: 0px;
 	background-position:center;
 	h2 {
-	color: #ffffff;
+	color: #ff0019;
 	text-shadow: 0px 2px 3px #555;
 	margin-top: 0.2cm;
 	}
 	h3 {
-	color: #ffffff;
+	color: #ff0019;
 	text-shadow: 0px 2px 3px #555;
 	margin-top: -0.3cm;
 	}
