--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,23 +8,25 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/pages/home"><%= image_tag("ontario.png", :size => "60x60", :alt => "Navbar Header", :style =>"margin-right:25px; margin-top:-14px;" ) %></a>
+     <%= link_to image_tag("ontario.png", :size => "60x60", :alt => "Navbar Header", :style =>"margin-right:25px; margin-top:-14px;" ), pages_home_path, class: "navbar-brand"%>
+      
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/pages/home" style="margin-right 20px">Home</a></li>
-        <li><a href="/pages/membership">Advertise a Real Estate Service or Listing</a></li>
+         <li><%= link_to t('navbar_home'), pages_home_path %></li>
+        <li><%= link_to t('navbar_memberships'), pages_membership_path %></li>
+
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Find All in Real Estate <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t('navbar_search') %><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/residentials">Residential Property Listing</a></li>
-            <li><a href="/commercialpropertiesforsales">Commercial Property Listing</a></li>
-            <li><a href="/pages/realestateservices">Real Estate Services</a></li>
+             <li><%= link_to t('navbar_residential'), residentials_path %></li>
+             <li><%= link_to t('navbar_commercial'), commercialpropertiesforsales_path %></li>
+             <li><%= link_to t('navbar_realservices'), pages_realestateservices_path %></li>
           </ul>
           </li>
-          <li><a href="/pages/contactus">About us</a></li>
+          <li><%= link_to t('navbar_about'), pages_contactus_path %></li>
 
           </ul>
          
@@ -32,6 +34,13 @@
       </ul>
 
        <ul class="nav navbar-nav navbar-right">
+         <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t('navbar_language') %><span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu">
+             <li><%= link_to t('navbar_english'), root_path(locale: 'en') %></li>
+             <li><%= link_to t('navbar_french'), root_path(locale: 'fr') %></li>
+          </ul>
+          </li>
       <% if user_signed_in? %>
         
         <li class="dropdown">
@@ -44,11 +53,11 @@
         </li>
       <% else %>
          <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create Account or Sign In <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-        <li>Not a Member?<%= link_to "Create a Ontarios's Only Account", new_user_registration_path %></li>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= t('navbar_account') %><span class="caret"></span></a>
+          <ul class="dropdown-menu" role="menu"><%= t('navbar_notmember') %>
+        <li><%= link_to t('navbar_create'), new_user_registration_path %></li>
 
-        <li>Already a Member?<%= link_to "Sign in to Your Ontarios's Only Account", new_user_session_path %></li>
+        <%= t('navbar_member') %><li><%= link_to t('navbar_signin'), new_user_session_path %></li>
       <% end %>
     </ul>
   </div><!-- /.navbar-collapse -->
@@ -60,7 +69,8 @@
   </div>
 </div>
 </div>
-  <h4 style="font-family:Calibri", align="center"><font color="bd9130"><font size="10">Everything Real Estate - Only Real Estate</font></font>
+<%= t('title_html') %>
+  
 
 <!--<div class="page-header">
   <h1>FLORIDA'S ONLY <small>Everything Real Estate</small></h1>
