--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,39 +1,41 @@
 <div class="row" id="featuresHeading">
     <div class="col-12">
-        <font color="ff0019"><h2 style="font-family:Calibri"><strong>What are you Looking for?</strong></h2></font>
-        <p class="lead"></p>
+        <%= t('subtitle_html') %>
     </div>
 </div>
 <div class="row" id="features">
 <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
-                <font color="bd9130"><h3 class="panel-title", style="font-family:Calibri"><strong>RESIDENTIAL REAL ESTATE</strong></h3></font>
+                <%= t('semititle_html') %>
             </div>
              <%= image_tag("house.jpg", :size => "150x150", :alt => "Residentials", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <a href="/residentials" target="_self" class="btn btn-default">Purchase or Lease</a>
+            <%= link_to t('Purchase_or_Lease'), residentials_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            
         </div>
 </div>
 
     <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
-                 <font color="bd9130"><h3 class="panel-title", style="font-family:Calibri"><strong>COMMERCIAL REAL ESTATE</strong></h3></font>
+                <%= t('csemititle_html') %>
+                 
             </div>
              <%= image_tag("office.jpg", :size => "150x150", :alt => "Residentials", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <a href="/commercialpropertiesforsales" target="_self" class="btn btn-default">Purchase or Lease</a>
+            <%= link_to t('Purchase_or_Lease'), commercialpropertiesforsales_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
     </div>
 <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
-                 <font color="bd9130"><h3 class="panel-title", style="font-family:Calibri"><strong>REAL ESTATE SERVICES</strong></h3></font>
+                 <%= t('ssemititle_html') %>
+                 
             </div>
               <%= image_tag("services.jpg", :size => "200x148", :alt => "Residentials", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <a href="/pages/realestateservices" target="_self" class="btn btn-default">Services</a>
+            <%= link_to t('Service'), pages_realestateservices_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
 </div>
