--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -10,7 +10,8 @@
     <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
-                <h3 class="panel-title">ARCHITECTS</h3>
+                <h3 class="panel-title"><%= link_to "ARCHITECTS", arquitects_path %></h3>
+               
             </div>
             <%= image_tag("architect.png", :size => "100x100", :alt => "Architect", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
