--- a/app/views/subscriptions/new.html.erb
+++ b/app/views/subscriptions/new.html.erb
@@ -1,7 +1,6 @@
 <div class="jumbotron">
  	<div class="left">
- 	<h2>Advertise Real Estate Services</h2>
- 	
+ 		<%= t('jumbotron_title_html') %>
  </div>
  </div>
 <br>
