--- a/app/views/residentials/index.html.erb
+++ b/app/views/residentials/index.html.erb
@@ -1,16 +1,18 @@
  <div class="jumbotron">
   <div class="left">
-  <h2>Residential Property Listing</h2>
+    <%= t('jumbotron_residentialtitle_html') %>
+  
  </div>
  </div>
   <div class="left">
-      <h4><strong>Find a Residential Listing</strong></h4>
+     <%= t('searchresidential_html') %>
    <%= form_tag search_residentials_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (Address, City, Zipcode)",class: "form-control" %><br>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'),class: "form-control" %><br>
       <div class="right">
         <button type ="button" class="btn btn-link" data-toggle="collapse" data-target="#filter">
-          ADVANCED SEARCH OPTIONS<br>
+          <%= t('advancesearch') %>
+          <br>
         </button>
           <div id="filter" class="collapse in">
             <br>
@@ -18,39 +20,36 @@
               <div class= "row">
                 <div class= "col-md-4">
                  <div class= "form-group">
-                  <%= label_tag :Purchase_or_Lease %>
+                  <%= label_tag :Purchase_or_Lease, t('salerent') %><br>
                   <%= select_tag(:action, options_for_select([["For Sale", "Sale"],["For Rent","Rent"]], params[:action]),{
                     include_blank: false}) %>
                   </div>
                   </div>
                   <div class= "col-md-4">
                   <div class= "form-group">
-                <%= label_tag :type_of_Property %>
+                <%= label_tag :type_of_Property, t('propertytype') %><br>
                  <%= select_tag(:property_type, options_for_select([["Single Family","Single Family Home"],["Townhouse/Condo","Townhouse or Condo"],["Mid/Hi Condominium","High Condominium"],["Residential_Lots","Lots"],["Multi-Family Home","Multi Family Home"]], params[:property_type]),{include_blank: false}) %>
                </div>
              </div>
              <div class= "col-md-4">
                <div class= "form-group">
-                <%= label_tag :Status %>
+                <%= label_tag :Status, t('status') %><br>
                  <%= select_tag(:status, options_for_select([["Active","Active"],["Pending", "Pending"],["Pending Continue to Show", "Pending Continue to Show"],["Sold", "Sold"]],params[:status]),{include_blank: false}) %>
                 </div>
               </div>
               <div class= "col-md-4">
                 <div class= "form-group">
-                <%= label_tag :construction_Type %>
+                <%= label_tag :construction_Type, t('construction') %><br>
                   <%= select_tag(:construction_type, options_for_select([["New Construction", "New Construction"],["Renovated","Renovated"],["Needs Renovations", "Needs Renovations"]], params[:construction_type]),{include_blank: false}) %>
                   </div>
                 </div>
                 <div class= "col-md-4">
-                  <div class= "form-group">
-                <%= label_tag :Florida_area %>
-                  <%= select_tag(:florida_mlsarea, options_for_select([["North_Florida", "North_Florida"],["Central_Florida","Central_Florida"],["South_Florida", "South_Florida"]], params[:florida_mlsarea]),{include_blank: false}) %>
+                  <%= label_tag :Is_a_Foreclosure?, t('foreclosure') %><br>
+                  <%= select_tag(:foreclosure, options_for_select([["YES","YES"],["NO","NO"]], params[:foreclosure]),{include_blank: false}) %>
                 </div>
-              </div>
               <div class= "col-md-4">
                 <div class= "form-group">
-                <%= label_tag :Is_a_Foreclosure? %>
-                  <%= select_tag(:foreclosure, options_for_select([["YES","YES"],["NO","NO"]], params[:foreclosure]),{include_blank: false}) %>
+                
                 </div>
               </div>
             </div>
@@ -60,44 +59,45 @@
               <div class= "row">
               <div class= "col-md-2">
                 <div class= "form-group">
-                  <%= label_tag :bedrooms %>
+                  <%= label_tag :bedrooms, t('bedrooms') %><br>
+                  <br>
                   <%= text_field_tag :bedrooms, params[:bedrooms], class: "form-control" %>
               </div>
             </div>
               <div class= "col-md-2">
                 <div class= "form-group">
-                  <%= label_tag :full_bathrooms %>
+                  <%= label_tag :full_bathrooms, t('fullbathrooms') %><br>
                   <%= text_field_tag :full_bathrooms, params[:full_bathrooms], class: "form-control" %>
               </div>
             </div>
               <div class= "col-md-2">
                 <div class= "form-group">
-                    <%= label_tag :half_bathrooms %>
+                    <%= label_tag :half_bathrooms, t('halfbathrooms') %><br>
                     <%= text_field_tag :half_bathrooms, params[:half_bathrooms], class: "form-control" %>
               </div>
             </div>
               <div class= "col-md-2">
                 <div class= "form-group">
-                  <%= label_tag :Min_square_feet %>
+                  <%= label_tag :Min_square_feet, t('minsqft') %><br>
                   <%= text_field_tag :min_square_feet, params[:min_square_feet], class: "form-control" %>
-
               </div>
             </div>
               <div class= "col-md-2">
                 <div class= "form-group">
-                  <%= label_tag :Max_square_feet %>
+                  <%= label_tag :Max_square_feet, t('maxsqft') %><br>
                   <%= text_field_tag :max_square_feet, params[:max_square_feet], class: "form-control" %>
               </div>
               </div>
               <div class= "col-md-2">
                 <div class= "form-group">
-                  <%= label_tag :Min_price %>
+                  <%= label_tag :Min_price, t('minprice') %><br>
+                  <br>
                   <%= text_field_tag :min_price, params[:min_price], class: "form-control" %>
               </div>
             </div>
               <div class= "col-md-2">
                 <div class= "form-group">
-                  <%= label_tag :Max_price %>
+                  <%= label_tag :Max_price, t('maxprice') %>
                   <%= text_field_tag :max_price, params[:max_price], class: "form-control" %>
               </div>
             </div>
@@ -106,7 +106,7 @@
         </div>
       </div>  
 <br>
- <%= submit_tag "Search", name: nil ,class: "btn btn-danger" %>
+ <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
 </div>
       <% end %>
@@ -125,23 +125,21 @@
       <div class="caption">
         <h3><strong><%= residential.address %></strong></h3>
           <h4><strong><th>Price: </th> <%= number_to_currency(residential.price) %></strong></h4>
-          <p>
-             <p><%= "Listed by: #{residential.user.name}" %></p>
+          <p>   <p><%= t('listed_by', user: residential.user.name) %></p>
             <%= residential.property_type %><br>
-            <th>Bedrooms:  </th>   <%= residential.bedrooms %><br>
-            <th>Full Bathrooms: </th>   <%= residential.full_bathrooms %><br>
-            <th>Half Bathrooms: </th>   <%= residential.half_bathrooms %><br>
-            <th>Square Feet: </th> <%= residential.square_feet %><br>
-            <th>Zip Code: </th>    <%= residential.zip_code %><br>
-             <th>Construction Type: </th> <%= residential.construction_type %><br>
-             <th>City: </th> <%= residential.city %><br>
-             <th>Florida MLS Area: </th> <%= residential.florida_mlsarea %><br>
-            <th>Private Pool: </th>    <%= residential.private_pool %><br>
-            <th>Water View: </th> <%= residential.water_view %><br>
-            <th>Golf Course: </th> <%= residential.golf_course %><br>
-            <th>Water Front: </th> <%= residential.water_front %><br>
+            <th><%= label_tag :nil, t('bedrooms') %></th>   <%= residential.bedrooms %><br>
+            <th><%= label_tag :nil, t('fullbathrooms') %></th>   <%= residential.full_bathrooms %><br>
+            <th><%= label_tag :nil, t('halfbathrooms') %></th>   <%= residential.half_bathrooms %><br>
+            <th><%= label_tag :nil, t('squarefeet') %></th> <%= residential.square_feet %><br>
+            <th><%= label_tag :nil, t('zipcode') %></th>    <%= residential.zip_code %><br>
+             <th><%= label_tag :nil, t('construction') %></th> <%= residential.construction_type %><br>
+             <th><%= label_tag :nil, t('city') %></th> <%= residential.city %><br>
+            <th><%= label_tag :nil, t('privatepool') %></th>    <%= residential.private_pool %><br>
+            <th><%= label_tag :nil, t('waterview') %></th> <%= residential.water_view %><br>
+            <th><%= label_tag :nil, t('golf') %></th> <%= residential.golf_course %><br>
+            <th><%= label_tag :nil, t('water') %></th> <%= residential.water_front %><br>
            
-            <th>Status: </th> <%= residential.status %><br>
+            <th><%= label_tag :Status, t('status') %></th> <%= residential.status %><br>
 
           </p>
           <%= link_to 'Show', residential, class: "btn btn-warning" %>
@@ -160,7 +158,7 @@
 
 <br>
 <% if user_signed_in? %>
-<%= link_to 'Add a new Residential Listing', new_residential_path, class: "btn btn-danger" %>
+<%= link_to t('new_residential'), new_residential_path, class: "btn btn-success" %>
 <% end %>
 <br>
 
