--- a/app/views/pages/privacypolicy.html.erb
+++ b/app/views/pages/privacypolicy.html.erb
@@ -5,11 +5,13 @@
 
  <div class="row" id="featuresHeading">
     <div class="col-12">
-        <h2 style="font-family:Arial"><strong>PRIVACY POLICY</strong></h2>
+    	<%= t('privacy_html') %>
+        
         <p class="lead"></p>
     </div>
 </div>
 <div class="left">
+	
 <body>
 D&G Global (“D&G Global”) takes your privacy very seriously. We ask that you read this privacy policy (the “Policy”) carefully as it contains important information about what to expect when D&G Global collects personal information about you and how D&G Global will use your personal data.<br>
 This Policy applies to information we collect on www.floridasonly.com/privacypolicy and its sub-domains about:<br>
