--- a/app/views/residentials/index.html.erb
+++ b/app/views/residentials/index.html.erb
@@ -124,7 +124,7 @@
       <%= link_to image_tag(residential.image.url), residential %>
       <div class="caption">
         <h3><strong><%= residential.address %></strong></h3>
-          <h4><strong><th>Price: </th> <%= number_to_currency(residential.price) %></strong></h4>
+          <h4><strong><th><th><%= label_tag :nil, t('price') %> </th> <%= number_to_currency(residential.price) %></strong></h4>
           <p>   <p><%= t('listed_by', user: residential.user.name) %></p>
             <%= residential.property_type %><br>
             <th><%= label_tag :nil, t('bedrooms') %></th>   <%= residential.bedrooms %><br>
