--- a/app/views/countertops/show.html.erb
+++ b/app/views/countertops/show.html.erb
@@ -6,27 +6,27 @@
       <strong><%= @countertop.company_name %></strong>
       <br>
       <br>
-      <strong>Company Website:</strong>  
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
       <%= link_to @countertop.company_website, @countertop.company_website %><br>
       
       
-      <strong>Company contact name:</strong>  
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
      <%= @countertop.contact_name %>
      <br>
-      <strong>Company phone:</strong> 
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
      <%= @countertop.company_phone %><br>
-     <strong>Address:</strong>  
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
      <%= @countertop.address %><br>
-      <strong>City:</strong>  
+      <strong><%= label_tag :nil, t('city') %></strong>  
      <%= @countertop.city %><br>
-     <strong>Zipcode:</strong>  
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
      <%= @countertop.zipcode %><br>
     </div>
      <br>
 
   </div>
   <div class="col-md-6">
-    <h5><strong>General Company Information:</strong></h5>
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
     <%= @countertop.company_description %>
   </div>
 
@@ -34,7 +34,7 @@
 
   <div class ="col-md-12">
     <div class= "center">
-   <strong>Map View Location:</strong><br>
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
    <br>
 <iframe
   width="800"
@@ -49,6 +49,8 @@
 <br>  
  </div>
 
+
+
 <%= link_to 'Edit', edit_countertop_path(@countertop), class: "btn btn-link" %> |
-<%= link_to 'Back', countertops_path, class: "btn btn-link" %>
+<%= link_to t('back'), countertops_path, class: "btn btn-link" %>
 
