--- a/app/views/customcabinets/index.html.erb
+++ b/app/views/customcabinets/index.html.erb
@@ -1,14 +1,21 @@
-<div class="left"> 
-<h4><strong>Find a New Custom Cabinets Service</strong></h4>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_cabinetstitle_html') %>
+  
+ </div>
+ </div>
+
+<div class="left">
+  <%= t('searchservice_html') %>
    <%= form_tag search_customcabinets_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
   <% end %>
-
+  
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
@@ -18,20 +25,20 @@
         <%= link_to image_tag(customcabinet.image.url), customcabinet %>
         <div class="caption">
           <h4><strong><%= customcabinet.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to customcabinet.company_website, customcabinet.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= customcabinet.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= customcabinet.address %><br> 
-           <strong><th>City: </th></strong><%= customcabinet.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= customcabinet.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= customcabinet.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= customcabinet.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', customcabinet, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', customcabinet, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_customcabinet_path(customcabinet), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', customcabinet, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_customcabinet_path(customcabinet), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', customcabinet, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -39,9 +46,6 @@
     </div>
 
   </div>
-</div>   
-   
+</div>  
 
-<br>
-<br>
-<%= link_to 'New Customcabinet', new_customcabinet_path, class: "btn btn-warning" %>
+<%= link_to t('add_service'), new_customcabinet_path, class: "btn btn-success" %>
