--- a/app/views/customcabinets/new.html.erb
+++ b/app/views/customcabinets/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New customcabinet</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_cabinetstitle_html') %>
+  
+ </div>
+ </div>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', customcabinets_path %>
+<%= link_to t('back'), customcabinets_path %>
