--- a/app/views/drywalls/index.html.erb
+++ b/app/views/drywalls/index.html.erb
@@ -1,14 +1,20 @@
-<div class="left"> 
-<h4><strong>Find a New Drywall Service</strong></h4>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_drywalltitle_html') %>
+  
+ </div>
+ </div>
+<div class="left">
+  <%= t('searchservice_html') %>
    <%= form_tag search_drywalls_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
   <% end %>
-
+  
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
@@ -18,20 +24,20 @@
         <%= link_to image_tag(drywall.image.url), drywall %>
         <div class="caption">
           <h4><strong><%= drywall.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to drywall.company_website, drywall.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= drywall.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= drywall.address %><br> 
-           <strong><th>City: </th></strong><%= drywall.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= drywall.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= drywall.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= drywall.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', drywall, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', drywall, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_drywall_path(drywall), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', drywall, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_drywall_path(drywall), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', drywall, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -39,7 +45,8 @@
     </div>
 
   </div>
-</div>   
-   
-<%= link_to 'New Drywall', new_drywall_path, class: "btn btn-warning" %>
+</div>  
+
+<%= link_to t('add_service'), new_drywall_path, class: "btn btn-success" %>
+
 
