--- a/app/views/drywalls/show.html.erb
+++ b/app/views/drywalls/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-md-6">
     <div class="thumbnail">
@@ -7,27 +6,27 @@
       <strong><%= @drywall.company_name %></strong>
       <br>
       <br>
-      <strong>Company Website:</strong>  
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
       <%= link_to @drywall.company_website, @drywall.company_website %><br>
       
       
-      <strong>Company contact name:</strong>  
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
      <%= @drywall.contact_name %>
      <br>
-      <strong>Company phone:</strong> 
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
      <%= @drywall.company_phone %><br>
-     <strong>Address:</strong>  
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
      <%= @drywall.address %><br>
-      <strong>City:</strong>  
+      <strong><%= label_tag :nil, t('city') %></strong>  
      <%= @drywall.city %><br>
-     <strong>Zipcode:</strong>  
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
      <%= @drywall.zipcode %><br>
     </div>
      <br>
 
   </div>
   <div class="col-md-6">
-    <h5><strong>General Company Information:</strong></h5>
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
     <%= @drywall.company_description %>
   </div>
 
@@ -35,7 +34,7 @@
 
   <div class ="col-md-12">
     <div class= "center">
-   <strong>Map View Location:</strong><br>
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
    <br>
 <iframe
   width="800"
@@ -50,6 +49,7 @@
 <br>  
  </div>
 
-<%= link_to 'Edit', edit_drywall_path(@customcabinet), class: "btn btn-link" %> |
-<%= link_to 'Back', drywalls_path, class: "btn btn-link" %>
+
+<%= link_to 'Edit', edit_drywall_path(@drywall), class: "btn btn-link" %> |
+<%= link_to t('back'), drywalls_path, class: "btn btn-link" %>
 
