--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -96,7 +96,7 @@
             
              <%= image_tag("customcabinets.png", :size => "100x100", :alt => "CashBuyer", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), cashbuyers_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), customcabinets_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -131,7 +131,7 @@
             </div>
              <%= image_tag("countertop.jpg", :size => "100x100", :alt => "Drywall", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), drywalls_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), countertops_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
