--- a/app/views/arquitects/edit.html.erb
+++ b/app/views/arquitects/edit.html.erb
@@ -1,4 +1,9 @@
-<h1>Editing Arquitects Services</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_architecttitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
