--- a/app/views/arquitects/index.html.erb
+++ b/app/views/arquitects/index.html.erb
@@ -1,38 +1,44 @@
-<div class="left"> 
- <h4><strong>Find a New Architect Service</strong></h4>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_architecttitle_html') %>
+  
+ </div>
+ </div>
+
+<div class="left">
+  <%= t('searchservice_html') %>
    <%= form_tag search_arquitects_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
   <% end %>
-
-
+  
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @arquitects.each do |arquitect| %>
+     <% @arquitects.each do |arquitect| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(arquitect.image.url), arquitect %>
         <div class="caption">
           <h4><strong><%= arquitect.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to arquitect.company_website, arquitect.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= arquitect.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= arquitect.address %><br> 
-           <strong><th>City: </th></strong><%= arquitect.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= arquitect.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= arquitect.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= arquitect.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', arquitect, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', arquitect, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_service_path(arquitect), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', arquitect, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_arquitect_path(arquitect), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', arquitect, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -40,14 +46,7 @@
     </div>
 
   </div>
-</div>   
-   
-
-<br>
-<br>
+</div>  
 
 
-<%= link_to 'New Service', new_arquitect_path, class: "btn btn-warning" %>
-
-
-  
+<%= link_to t('add_service'), new_arquitect_path, class: "btn btn-warning" %>
