--- a/app/views/arquitects/search.html.erb
+++ b/app/views/arquitects/search.html.erb
@@ -1,28 +1,27 @@
-
-<h4><strong>Search Results:</strong></h4><br>
+<%= t('searchresults_html') %>
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @arquitects.each do |arquitect| %>
+     <% @arquitects.each do |arquitect| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(arquitect.image.url), arquitect %>
         <div class="caption">
           <h4><strong><%= arquitect.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to arquitect.company_website, arquitect.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= arquitect.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= arquitect.address %><br> 
-           <strong><th>City: </th></strong><%= arquitect.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= arquitect.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= arquitect.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= arquitect.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', arquitect, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', arquitect, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_service_path(arquitect), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', arquitect, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_arquitect_path(arquitect), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', arquitect, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -30,11 +29,12 @@
     </div>
 
   </div>
-</div>   
+</div>
+
    
 
 <br>
 <br>
 
 
-<%= link_to 'Back', arquitects_path, class: "btn btn-link" %>
+<%= link_to t('back'), arquitects_path, class: "btn btn-link" %>
