--- a/app/views/arquitects/show.html.erb
+++ b/app/views/arquitects/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-md-6">
     <div class="thumbnail">
@@ -7,27 +6,27 @@
       <strong><%= @arquitect.company_name %></strong>
       <br>
       <br>
-      <strong>Company Website:</strong>  
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
       <%= link_to @arquitect.company_website, @arquitect.company_website %><br>
       
       
-      <strong>Company contact name:</strong>  
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
      <%= @arquitect.contact_name %>
      <br>
-      <strong>Company phone:</strong> 
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
      <%= @arquitect.company_phone %><br>
-     <strong>Address:</strong>  
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
      <%= @arquitect.address %><br>
-      <strong>City:</strong>  
+      <strong><%= label_tag :nil, t('city') %></strong>  
      <%= @arquitect.city %><br>
-     <strong>Zipcode:</strong>  
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
      <%= @arquitect.zipcode %><br>
     </div>
      <br>
 
   </div>
   <div class="col-md-6">
-    <h5><strong>General Company Information:</strong></h5>
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
     <%= @arquitect.company_description %>
   </div>
 
@@ -35,7 +34,7 @@
 
   <div class ="col-md-12">
     <div class= "center">
-   <strong>Map View Location:</strong><br>
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
    <br>
 <iframe
   width="800"
@@ -51,10 +50,15 @@
  </div>
 
 
+      
+      
+     
+
+
 
 
 <%= link_to 'Edit', edit_arquitect_path(@arquitect), class: "btn btn-link" %> |
-<%= link_to 'Back', arquitects_path, class: "btn btn-link" %>
+<%= link_to t('back'), arquitects_path, class: "btn btn-link" %>
 
 
 
