--- a/app/views/countertops/index.html.erb
+++ b/app/views/countertops/index.html.erb
@@ -1,37 +1,44 @@
- <div class="left"> 
-<h4><strong>Find a New Countertop Service</strong></h4>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_countertoptitle_html') %>
+  
+ </div>
+ </div>
+
+<div class="left">
+  <%= t('searchservice_html') %>
    <%= form_tag search_countertops_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
   <% end %>
-
+  
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @countertops.each do |countertop| %>
+     <% @countertops.each do |countertop| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(countertop.image.url), countertop %>
         <div class="caption">
           <h4><strong><%= countertop.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to countertop.company_website, countertop.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= countertop.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= countertop.address %><br> 
-           <strong><th>City: </th></strong><%= countertop.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= countertop.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= countertop.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= countertop.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', countertop, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', countertop, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_countertop_path(countertop), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', countertop, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_countertop_path(countertop), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', countertop, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -39,10 +46,7 @@
     </div>
 
   </div>
-</div>   
-   
+</div>  
 
-<br>
-<br>
+<%= link_to t('add_service'), new_countertop_path, class: "btn btn-success" %>
 
-<%= link_to 'New Countertop', new_countertop_path, class: "btn btn-warning" %>
