--- a/app/views/customcabinets/edit.html.erb
+++ b/app/views/customcabinets/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing customcabinet</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_cabinetstitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @customcabinet %> |
-<%= link_to 'Back', customcabinets_path %>
+<%= link_to t('back'), customcabinets_path %>
