--- a/app/views/drywalls/edit.html.erb
+++ b/app/views/drywalls/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing drywall</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_drywalltitle_html') %>
+  
+ </div>
+ </div>
+
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @drywall %> |
-<%= link_to 'Back', drywalls_path %>
+<%= link_to t('back'), drywalls_path %>
