--- a/app/views/drywalls/new.html.erb
+++ b/app/views/drywalls/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New drywall</h1>
+ <div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_drywalltitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', drywalls_path %>
+<%= link_to t('back'), drywalls_path %>
