--- a/app/views/floorings/index.html.erb
+++ b/app/views/floorings/index.html.erb
@@ -1,39 +1,49 @@
-<h1>Listing floorings</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @floorings.each do |flooring| %>
-      <tr>
-        <td><%= flooring.company_name %></td>
-        <td><%= flooring.company_description %></td>
-        <td><%= flooring.address %></td>
-        <td><%= flooring.city %></td>
-        <td><%= flooring.zipcode %></td>
-        <td><%= flooring.contact_name %></td>
-        <td><%= flooring.company_website %></td>
-        <td><%= flooring.company_phone %></td>
-        <td><%= link_to 'Show', flooring %></td>
-        <td><%= link_to 'Edit', edit_flooring_path(flooring) %></td>
-        <td><%= link_to 'Destroy', flooring, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_flooringstitle_html') %>
+  
+ </div>
+ </div>
+<div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_floorings_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
+  
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @floorings.each do |flooring| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(flooring.image.url), flooring %>
+        <div class="caption">
+          <h4><strong><%= flooring.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to flooring.company_website, flooring.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= flooring.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= flooring.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= flooring.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= flooring.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', flooring, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_flooring_path(flooring), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', flooring, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
 
-<br>
-
-<%= link_to 'New Flooring', new_flooring_path %>
+  </div>
+</div>   
+<%= link_to t('add_service'), new_flooring_path, class: "btn btn-success" %>
