--- a/app/views/floorings/new.html.erb
+++ b/app/views/floorings/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New flooring</h1>
+  <div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_flooringstitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', floorings_path %>
+<%= link_to t('back'), floorings_path %>
