--- a/app/views/floorings/show.html.erb
+++ b/app/views/floorings/show.html.erb
@@ -1,44 +1,53 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-6">
+    <div class="thumbnail">
+       <%= image_tag @flooring.image.url %>
+       <br> 
+      <strong><%= @flooring.company_name %></strong>
+      <br>
+      <br>
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
+      <%= link_to @flooring.company_website, @flooring.company_website %><br>
+      
+      
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
+     <%= @flooring.contact_name %>
+     <br>
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
+     <%= @flooring.company_phone %><br>
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
+     <%= @flooring.address %><br>
+      <strong><%= label_tag :nil, t('city') %></strong>  
+     <%= @flooring.city %><br>
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
+     <%= @flooring.zipcode %><br>
+    </div>
+     <br>
 
-<p>
-  <strong>Company name:</strong>
-  <%= @flooring.company_name %>
-</p>
+  </div>
+  <div class="col-md-6">
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
+    <%= @flooring.company_description %>
+  </div>
 
-<p>
-  <strong>Company description:</strong>
-  <%= @flooring.company_description %>
-</p>
+</div>
 
-<p>
-  <strong>Address:</strong>
-  <%= @flooring.address %>
-</p>
+  <div class ="col-md-12">
+    <div class= "center">
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
+   <br>
+<iframe
+  width="800"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAUOQ0h7ZYU56FuY9ziMMXURoIlHxC3pfY
+    &q=<%= @flooring.address.parameterize %>">
+</iframe>
 
-<p>
-  <strong>City:</strong>
-  <%= @flooring.city %>
-</p>
+</div>
+<br>
+<br>  
+ </div>
 
-<p>
-  <strong>Zipcode:</strong>
-  <%= @flooring.zipcode %>
-</p>
-
-<p>
-  <strong>Contact name:</strong>
-  <%= @flooring.contact_name %>
-</p>
-
-<p>
-  <strong>Company website:</strong>
-  <%= @flooring.company_website %>
-</p>
-
-<p>
-  <strong>Company phone:</strong>
-  <%= @flooring.company_phone %>
-</p>
-
-<%= link_to 'Edit', edit_flooring_path(@flooring) %> |
-<%= link_to 'Back', floorings_path %>
+<%= link_to 'Edit', edit_flooring_path(@flooring), class: "btn btn-link" %> |
+<%= link_to t('back'), floorings_path, class: "btn btn-link" %>
