--- a/app/views/residentials/new.html.erb
+++ b/app/views/residentials/new.html.erb
@@ -1,6 +1,7 @@
- <div class="jumbotron">
- 	<div class="left">
- 	<h2>New Residential Property Listing</h2>
+  <div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_residentialtitle_html') %>
+  
  </div>
  </div>
 <br>
