--- a/app/views/airconditioners/new.html.erb
+++ b/app/views/airconditioners/new.html.erb
@@ -1,7 +1,12 @@
-<h2><strong>Add a New Air Conditioner and Ventilation Service</strong></h2>
+  <div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_airconditionertitle_html') %>
+  
+ </div>
+ </div>
 <br>
 <br>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', airconditioners_path, class: "btn btn-link" %>
+<%= ink_to t('back'), airconditioners_path, class: "btn btn-link" %>
