--- a/app/views/generalcontractors/new.html.erb
+++ b/app/views/generalcontractors/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New generalcontractor</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_contratortitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', generalcontractors_path %>
+<%= link_to t('back'), generalcontractors_path %>
