--- a/app/views/hardmoneys/new.html.erb
+++ b/app/views/hardmoneys/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New hardmoney</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_hardmoneytitle_html') %>
+  
+ </div>
+ </div>
+
 
 <%= render 'form' %>
 
-<%= link_to 'Back', hardmoneys_path %>
+<%= link_to t('back'), hardmoneys_path %>
