--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -74,7 +74,7 @@
     
 <div class="left">
     <%= label_tag :nil, t('plan') %><br>
-    <%= f.select :name, options_for_select([["Basic Advertising Plan $49.99","Basic"],["Gold Advertising Plan $99.99", "Gold"]]), class: "form-control" %>
+    <%= f.select :name, options_for_select([["Basic Advertising Plan $49.99","Basic"],["Gold Advertising Plan $99.99", "Gold"], ["Discount Gold Advertising Plan $59.99", "GoldDiscount"]]), class: "form-control" %>
   </div>
   <br>
   <br>
