--- a/app/views/accountants/edit.html.erb
+++ b/app/views/accountants/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing accountant</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_accountantstitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @accountant, class: "btn btn-link" %> |
-<%= link_to 'Back', accountants_path, class: "btn btn-link" %>
+<%= link_to t('back'), accountants_path, class: "btn btn-link" %>
