--- a/app/views/accountants/index.html.erb
+++ b/app/views/accountants/index.html.erb
@@ -1,10 +1,17 @@
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_accountantstitle_html') %>
+  
+ </div>
+ </div>
+
    <div class="left"> 
-   <h4><strong>Find a New Accountant</strong></h4>
+   <%= t('searchservice_html') %>
    <%= form_tag search_accountants_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
  <% end %>
@@ -12,29 +19,27 @@
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-       <% @accountants.each do |accountant| %>
+     <% @accountants.each do |accountant| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(accountant.image.url), accountant %>
         <div class="caption">
           <h4><strong><%= accountant.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to accountant.company_website, accountant.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= accountant.company_phone %><br>
-            <strong><th>Email: </th></strong><br>
-            <%= accountant.email %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= accountant.address %><br> 
-           <strong><th>City: </th></strong><%= accountant.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= accountant.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= accountant.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= accountant.zipcode %><br>
            <br>
-
- 
-        <td><%= link_to 'Show', accountant, class: "btn btn-warning" %></td>
-        <td><%= link_to 'Edit', edit_accountant_path(accountant), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', accountant, method: :delete, data: { confirm: 'Are you sure?', class: "btn btn-warning" } %></td>
-     </div>
+           
+           <td><%= link_to 'Show', accountant, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_accountant_path(accountant), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', accountant, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
       </div>
     </div>
     <% end %>
@@ -43,8 +48,6 @@
   </div>
 </div>   
    
-
 <br>
 <br>
-
-<%= link_to 'New Accountant', new_accountant_path, class: "btn btn-warning" %>
+<%= link_to t('add_service'), new_accountant_path, class: "btn btn-success" %>
