--- a/app/views/accountants/new.html.erb
+++ b/app/views/accountants/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New accountant</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_accountantstitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', accountants_path, class: "btn btn-link" %>
+<%= link_to t('back'), accountants_path, class: "btn btn-link" %>
