--- a/app/views/accountants/show.html.erb
+++ b/app/views/accountants/show.html.erb
@@ -7,29 +7,27 @@
       <strong><%= @accountant.company_name %></strong>
       <br>
       <br>
-      <strong>Company Website:</strong>  
+      <strong><%= label_tag :nil, t('servicecompanywebsite') %></strong>  
       <%= link_to @accountant.company_website, @accountant.company_website %><br>
       
       
-      <strong>Company contact name:</strong>  
+      <strong><%= label_tag :nil, t('companycontactname') %></strong>  
      <%= @accountant.contact_name %>
      <br>
-      <strong>Company phone:</strong> 
+      <strong><%= label_tag :nil, t('companyservicephone') %></strong> 
      <%= @accountant.company_phone %><br>
-      <strong>Email contact:</strong> 
-     <%= @accountant.email %><br>
-     <strong>Address:</strong>  
+     <strong><%= label_tag :nil, t('servicecompanyaddress') %></strong>  
      <%= @accountant.address %><br>
-      <strong>City:</strong>  
-     <%= @@accountant.city %><br>
-     <strong>Zipcode:</strong>  
+      <strong><%= label_tag :nil, t('city') %></strong>  
+     <%= @accountant.city %><br>
+     <strong><%= label_tag :nil, t('zipcode') %></strong>  
      <%= @accountant.zipcode %><br>
     </div>
      <br>
 
   </div>
   <div class="col-md-6">
-    <h5><strong>General Company Information:</strong></h5>
+    <h5><strong><%= label_tag :nil, t('generalcompany') %></strong></h5>
     <%= @accountant.company_description %>
   </div>
 
@@ -37,7 +35,7 @@
 
   <div class ="col-md-12">
     <div class= "center">
-   <strong>Map View Location:</strong><br>
+   <strong><%= label_tag :nil, t('mapview') %></strong><br>
    <br>
 <iframe
   width="800"
@@ -54,4 +52,4 @@
 
 
 <%= link_to 'Edit', edit_accountant_path(@accountant), class: "btn btn-link" %> |
-<%= link_to 'Back', accountants_path, class: "btn btn-link" %>
+<%= link_to t('back'), accountants_path, class: "btn btn-link" %>
