--- a/app/views/airconditioners/edit.html.erb
+++ b/app/views/airconditioners/edit.html.erb
@@ -1,6 +1,12 @@
-<h1>Editing Air Conditioner and Ventilation Services</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_airconditionertitle_html') %>
+  
+ </div>
+ </div>
+
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @airconditioner, class: "btn btn-link" %> |
-<%= link_to 'Back', airconditioners_path, class: "btn btn-link" %>
+<%= link_to t('back'), airconditioners_path, class: "btn btn-link" %>
