--- a/app/views/airconditioners/index.html.erb
+++ b/app/views/airconditioners/index.html.erb
@@ -1,10 +1,17 @@
+  <div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_airconditionertitle_html') %>
+  
+ </div>
+ </div>
+
    <div class="left"> 
-   <h4><strong>Find a New Air Conditioner/Heating Service</strong></h4>
+    <%= t('searchservice_html') %>
    <%= form_tag search_airconditioners_path, method: :get do %>
           <p>
-        <%= text_field :search, params[:search], placeholder: "Enter a Location (City, Zipcode)",class: "form-control" %>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox') class: "form-control" %>
         <br>
-         <%= submit_tag "Search", name: nil ,class: "btn btn-warning" %>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
       </p>
     </div>
   <% end %>
@@ -12,26 +19,26 @@
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @airconditioners.each do |airconditioner| %>
+     <% @airconditioners.each do |airconditioner| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(airconditioner.image.url), airconditioner %>
         <div class="caption">
           <h4><strong><%= airconditioner.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to airconditioner.company_website, airconditioner.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= airconditioner.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= airconditioner.address %><br> 
-           <strong><th>City: </th></strong><%= airconditioner.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= airconditioner.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= airconditioner.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= airconditioner.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', airconditioner, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', airconditioner, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_airconditioner_path(airconditioner), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', airconditioner, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_airconditioner_path(airconditioner), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', airconditioner, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -45,7 +52,6 @@
 <br>
 <br>
 
-
-<%= link_to 'New Air conditioner', new_airconditioner_path, class: "btn btn-warning" %>
+<%= link_to t('add_service'), new_airconditioner_path, class: "btn btn-success" %>
 
  
