--- a/app/views/airconditioners/search.html.erb
+++ b/app/views/airconditioners/search.html.erb
@@ -1,29 +1,27 @@
-
-<h4><strong>Search Results:</strong></h4><br>
-
+<%= t('searchresults_html') %>
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @airconditioners.each do |airconditioner| %>
+     <% @airconditioners.each do |airconditioner| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(airconditioner.image.url), airconditioner %>
         <div class="caption">
           <h4><strong><%= airconditioner.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to airconditioner.company_website, airconditioner.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= airconditioner.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= airconditioner.address %><br> 
-           <strong><th>City: </th></strong><%= airconditioner.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= airconditioner.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= airconditioner.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= airconditioner.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', airconditioner, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', airconditioner, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_airconditioner_path(airconditioner), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', airconditioner, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_airconditioner_path(airconditioner), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', airconditioner, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -31,11 +29,10 @@
     </div>
 
   </div>
-</div>   
+</div>
    
 
 <br>
 <br>
 
-
-<%= link_to 'Back', airconditioners_path, class: "btn btn-link" %>
+<%= link_to t('back'), airconditioners_path, class: "btn btn-link" %>
