--- a/app/views/arquitects/edit.html.erb
+++ b/app/views/arquitects/edit.html.erb
@@ -8,4 +8,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @arquitect, class: "btn btn-link" %> |
-<%= link_to 'Back', arquitects_path, class: "btn btn-link" %>
+<%= link_to t('back'), arquitects_path, class: "btn btn-link" %>
