--- a/app/views/arquitects/index.html.erb
+++ b/app/views/arquitects/index.html.erb
@@ -49,4 +49,4 @@
 </div>  
 
 
-<%= link_to t('add_service'), new_arquitect_path, class: "btn btn-warning" %>
+<%= link_to t('add_service'), new_arquitect_path, class: "btn btn-success" %>
