--- a/app/views/cashbuyers/edit.html.erb
+++ b/app/views/cashbuyers/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing cashbuyer</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_cashbuyertitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @cashbuyer %> |
-<%= link_to 'Back', cashbuyers_path %>
+<%= link_to t('back'), cashbuyers_path %>
