--- a/app/views/cashbuyers/new.html.erb
+++ b/app/views/cashbuyers/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New cashbuyer</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_cashbuyertitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', cashbuyers_path %>
+<%= link_to t('back'), cashbuyers_path %>
