--- a/app/views/cashbuyers/search.html.erb
+++ b/app/views/cashbuyers/search.html.erb
@@ -1,27 +1,27 @@
-<h4><strong>Search Results:</strong></h4><br>
+<%= t('searchresults_html') %>
 <div class="thumbnail">
   <div class="center"> 
     <div class="row">
-      <% @cashbuyers.each do |cashbuyer| %>
+     <% @cashbuyers.each do |cashbuyer| %>
       <div class="col-md-3">
       <div class="thumbnail">
         <%= link_to image_tag(cashbuyer.image.url), cashbuyer %>
         <div class="caption">
           <h4><strong><%= cashbuyer.company_name %></strong></h4>
-          <strong><th>Company Website: </th></strong><br>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
             <%= link_to cashbuyer.company_website, cashbuyer.company_website %><br>
-            <strong><th>Phone Number: </th></strong><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
             <%= cashbuyer.company_phone %><br>
-           <strong><th>Address: </th></strong><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
            <%= cashbuyer.address %><br> 
-           <strong><th>City: </th></strong><%= cashbuyer.city %><br>
-           <strong><th>Zipcode: </th></strong><br><%= cashbuyer.zipcode %><br>
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= cashbuyer.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= cashbuyer.zipcode %><br>
            <br>
            
-           <td><%= link_to 'Show', cashbuyer, class: "btn btn-warning" %></td>
+           <td><%= link_to 'Show', cashbuyer, class: "btn btn-success" %></td>
         
-        <td><%= link_to 'Edit', edit_cashbuyer_path(cashbuyer), class: "btn btn-warning" %></td>
-        <td><%= link_to 'Destroy', cashbuyer, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-warning" %></td>
+        <td><%= link_to 'Edit', edit_cashbuyer_path(cashbuyer), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', cashbuyer, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
         </div>
       </div>
     </div>
@@ -29,10 +29,13 @@
     </div>
 
   </div>
-</div>   
+</div>
+
    
 
 <br>
 <br>
 
-<%= link_to 'Back', cashbuyers_path, class: "btn btn-link" %>
+
+<%= link_to t('back'), cashbuyers_path, class: "btn btn-link" %>
+
