--- a/app/views/framings/edit.html.erb
+++ b/app/views/framings/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing framing</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_framingtitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @framing %> |
-<%= link_to 'Back', framings_path %>
+<%= link_to t('back'), framings_path %>
