--- a/app/views/framings/index.html.erb
+++ b/app/views/framings/index.html.erb
@@ -1,39 +1,57 @@
-<h1>Listing framings</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_framingtitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @framings.each do |framing| %>
-      <tr>
-        <td><%= framing.company_name %></td>
-        <td><%= framing.company_description %></td>
-        <td><%= framing.address %></td>
-        <td><%= framing.city %></td>
-        <td><%= framing.zipcode %></td>
-        <td><%= framing.contact_name %></td>
-        <td><%= framing.company_website %></td>
-        <td><%= framing.company_phone %></td>
-        <td><%= link_to 'Show', framing %></td>
-        <td><%= link_to 'Edit', edit_framing_path(framing) %></td>
-        <td><%= link_to 'Destroy', framing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_framings_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
+  
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @framings.each do |framing| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(framing.image.url), framing %>
+        <div class="caption">
+          <h4><strong><%= framing.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to framing.company_website, framing.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= framing.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= framing.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= framing.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= framing.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', framing, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_framing_path(framing), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', framing, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Framing', new_framing_path %>
+
+<%= link_to t('add_service'), new_framing_path, class: "btn btn-success" %>
