--- a/app/views/framings/new.html.erb
+++ b/app/views/framings/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New framing</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_framingtitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', framings_path %>
+<%= link_to t('back'), framings_path %>
