--- a/app/views/generalcontractors/edit.html.erb
+++ b/app/views/generalcontractors/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Editing generalcontractor</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_contratortitle_html') %>
+  
+ </div>
+ </div>
 
 <%= render 'form' %>
 
 <%= link_to 'Show', @generalcontractor %> |
-<%= link_to 'Back', generalcontractors_path %>
+<%= link_to t('back'), generalcontractors_path %>
