--- a/app/views/hardmoneys/index.html.erb
+++ b/app/views/hardmoneys/index.html.erb
@@ -1,39 +1,57 @@
-<h1>Listing hardmoneys</h1>
+<div class="jumbotron">
+  <div class="left">
+    <%= t('jumbotron_hardmoneytitle_html') %>
+  
+ </div>
+ </div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Company name</th>
-      <th>Company description</th>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zipcode</th>
-      <th>Contact name</th>
-      <th>Company website</th>
-      <th>Company phone</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="left">
+  <%= t('searchservice_html') %>
+   <%= form_tag search_hardmoneys_path, method: :get do %>
+          <p>
+        <%= text_field :search, params[:search], placeholder: t('searchtextbox'), class: "form-control" %>
+        <br>
+         <%= submit_tag t('searchbtn'), name: nil ,class: "btn btn-success" %>
+      </p>
+    </div>
+  <% end %>
 
-  <tbody>
-    <% @hardmoneys.each do |hardmoney| %>
-      <tr>
-        <td><%= hardmoney.company_name %></td>
-        <td><%= hardmoney.company_description %></td>
-        <td><%= hardmoney.address %></td>
-        <td><%= hardmoney.city %></td>
-        <td><%= hardmoney.zipcode %></td>
-        <td><%= hardmoney.contact_name %></td>
-        <td><%= hardmoney.company_website %></td>
-        <td><%= hardmoney.company_phone %></td>
-        <td><%= link_to 'Show', hardmoney %></td>
-        <td><%= link_to 'Edit', edit_hardmoney_path(hardmoney) %></td>
-        <td><%= link_to 'Destroy', hardmoney, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="thumbnail">
+  <div class="center"> 
+    <div class="row">
+     <% @hardmoneys.each do |hardmoney| %>
+      <div class="col-md-3">
+      <div class="thumbnail">
+        <%= link_to image_tag(hardmoney.image.url), hardmoney %>
+        <div class="caption">
+          <h4><strong><%= hardmoney.company_name %></strong></h4>
+          <strong><th><%= label_tag :nil, t('servicecompanywebsite') %></th></strong><br>
+            <%= link_to hardmoney.company_website, hardmoney.company_website %><br>
+            <strong><th><%= label_tag :nil, t('servicecompanyphone') %></th></strong><br>
+            <%= hardmoney.company_phone %><br>
+           <strong><th><%= label_tag :nil, t('servicecompanyaddress') %></th></strong><br>
+           <%= hardmoney.address %><br> 
+           <strong><th><%= label_tag :nil, t('city') %></th></strong><%= hardmoney.city %><br>
+           <strong><th><%= label_tag :nil, t('zipcode') %></th></strong><br><%= hardmoney.zipcode %><br>
+           <br>
+           
+           <td><%= link_to 'Show', hardmoney, class: "btn btn-success" %></td>
+        
+        <td><%= link_to 'Edit', edit_hardmoney_path(hardmoney), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', hardmoney, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-success" %></td>
+        </div>
+      </div>
+    </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
+
+  </div>
+</div> 
+
 
 <br>
+<br>
 
-<%= link_to 'New Hardmoney', new_hardmoney_path %>
+
+<%= link_to t('add_service'), new_hardmoney_path, class: "btn btn-success" %>
+
