--- a/app/views/pages/realestateservices.html.erb
+++ b/app/views/pages/realestateservices.html.erb
@@ -85,7 +85,7 @@
             </div>
              <%= image_tag("cashbuyer.png", :size => "100x100", :alt => "Bank", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), privatebanks_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), cashbuyers_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
         <div class="col-md-4 feature">
@@ -237,7 +237,7 @@
             </div>
              <%= image_tag("framing.jpg", :size => "100x100", :alt => "GeneralContractor", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), generalcontractors_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), framings_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
@@ -297,9 +297,10 @@
             </div>
              <%= image_tag("hardmoneylender.jpg", :size => "100x100", :alt => "Hardmoney", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), hardmoneys_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
+        
         <div class="col-md-4 feature">
         <div class="panel">
             <div class="panel-heading">
@@ -309,7 +310,7 @@
             </div>
              <%= image_tag("home.jpg", :size => "100x100", :alt => "InteriorDesing", :style =>"margin-right:25px; margin-top:10px;" ) %>
             <p></p>
-            <%= link_to t('searchservices'), interiordesigners_path, class: "btn btn-default", data: {no_turbolink: true} %>
+            <%= link_to t('searchservices'), hardmoneys_path, class: "btn btn-default", data: {no_turbolink: true} %>
         </div>
         </div>
          <div class="col-md-4 feature">
